--- a/src/input.css
+++ b/src/input.css
@@ -9,3 +9,9 @@
 .title{
     @apply text-3xl md:text-4xl font-bold leading-snug mb-4;
 }
+.blob1{
+    @apply w-80 h-80 bg-color-blob absolute top-0 -left-5 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full;
+}
+.blob2{
+    @apply w-80 h-80 bg-color-secondary absolute bottom-10 right-0 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full;
+}
